--- a/helloworld.yml
+++ b/helloworld.yml
@@ -1,10 +1,8 @@
 ---
-- name: file
-  hosts: all
- 
+- hosts: all
   tasks:
- 
-  - name: Creating file
+  - name: Creating an empty file
     file:
-      path: "/tmp/devops_server.txt"
+      path: "/root/test1.txt"
       state: touch
+    become: yes
